@@ -68,12 +68,12 @@
   <ItemGroup>
     <Compile Include="AI\WorkplaceAI.cs" />
     <Compile Include="Debugging.cs" />
+    <Compile Include="GUI\UIPreviewRenderer.cs" />
     <Compile Include="Patches\BuildingLoaded.cs" />
     <Compile Include="Patches\InitializePrefab.cs" />
     <Compile Include="Patches\InitPrefabTranspiler.cs" />
     <Compile Include="Translations.cs" />
     <Compile Include="ConvertPrefabs.cs" />
-    <Compile Include="GUI\BuildingPreview.cs" />
     <Compile Include="GUI\CategoryUtils.cs" />
     <Compile Include="GUI\FastList.cs" />
     <Compile Include="GUI\SettingsPanel.cs" />
